2007-05-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add support for single message deletion.

	* mcsource.c: More comment improvements.
	(mc_source): Set `this->base = NULL' on parsing a message number
	immediately followed by `newline'; this causes the message to be
	removed from the internal catalogue index, when the input record
	is merged.

	* mcmerge.c (mc_merge): Reorganise logic; add section to remove
	entries with `set > 0 && msg > 0 && base == NULL'.
	Relocate logic block for processing `delset' requests; still need
	an implementation for this.
	Add logic block to catch and diagnose invalid index entries.

	* include/gcmsgs.h (MSG_CATLOAD_FAILED): Renamed symbolic define...
	(MSG_BAD_CATALOGUE): ...to this.
	(MSG_INTERNAL_ERROR, MSG_BAD_INDEX): New message defines; used by
	`mc_merge', to diagnose invalid index entries.

	* include/gencat.h (msgarg): New macro; used by `mc_merge', to
	associate `MSG_BAD_INDEX' with `MSG_INTERNAL_ERROR'.

	* gencat.c (main): Use `MSG_BAD_CATALOGUE'.

2007-05-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	* mcsource.c: Miscellaneous comment and layout improvements;
	improved formatting of some debugging/tracing messages.
	(add_escape): Static function renamed...
	(mc_add_escape): ...to this.
	(wanted): Static function renamed...
	(mc_workspace_wanted): ...to this.
	(update_workspace): Static function renamed...
	(mc_update_workspace): ...to this.
	(errout): Static function renamed...
	(mc_errout): ...to this.

	* include/debug.h (DCODEFMT): Redundant macro; deleted.

2007-05-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Avoid attempt to read input again, after EOF detected; this caused
	strange behaviour if processing an interactive input stream.

	* mcsource.c (mc_source): New local variable `input_fd'; assign it as
	a duplicate of `fd'.  Set `fd' to -1, when EOF detected; don't do any
	more reads, after `fd' set to this invalid value.  Call `close' on
	`input_fd', before return.
